# HackGT

./: LICENSE.txt  README.md  abstraction_generic.py  abstractions.py  boundary_boxes.py  classes.txt  image_scrape.py  imagescrape.py  imagetest.py  requirements.txt  smart_resize.py  text_scrape.py  text_scrape_og.py
AlphaMine/: LICENSE.txt  README.md  pyproject.toml
AlphaMine/src/alpha_mine/: abstractions.py  classes.txt  mine_data.py
AlphaMine/src/alpha_mine/data/: image_meta.json  image_summary.json  text_summary.json
AlphaMine/src/alpha_mine/data/bmw_i8/: text.txt
AlphaMine/src/alpha_mine/data/rimac_nevera/: text.txt
AlphaMine/src/alpha_mine/data/tesla_model_3/: text.txt
Data/: img_summary.json
Data/wolf/: text.txt
data/: image_summary.json  text_summary.json
data/cat/: text.txt
data/dog/: text.txt
data/fox/: text.txt
data/lion/: text.txt
data/tiger/: text.txt
data/wolf/: text.txt
